--- a/Cindeck/Views/SimulationView.xaml
+++ b/Cindeck/Views/SimulationView.xaml
@@ -123,8 +123,8 @@
                     <Button HorizontalAlignment="Left" Content="実行" Command="{Binding StartSimulationCommand}" Width="200"/>
                     <StackPanel  x:Name="ResultPanel"  Visibility="{Binding Simulator.ResultsUpToDate, Converter={StaticResource BooleanToVisibilityConverter}}">
                         <Label DockPanel.Dock="Top" Content="※結果はALL PERFECTの場合のスコアです。"/>
-                        <StackPanel Orientation="Horizontal">
-                            <StackPanel DockPanel.Dock="Top" Margin="0,5,0,0" Orientation="Horizontal">
+                        <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
+                            <StackPanel  Orientation="Horizontal">
                                 <Label Content="平均"  FontWeight="Bold" />
                                 <Label>
                                     <TextBlock>
