double型の誤差が原因でアピール値がゲーム内の数値と一致しない問題を修正

--- a/Cindeck/Resources.xaml
+++ b/Cindeck/Resources.xaml
@@ -31,8 +31,8 @@
                                                 UpdateSourceTrigger=PropertyChanged}"
                                  x:Name="textSource" 
                                  Background="Transparent" 
-                                 Panel.ZIndex="2" />
-                        <TextBox Text="{TemplateBinding Tag}" Background="{TemplateBinding Background}" Panel.ZIndex="1">
+                                 Panel.ZIndex="2" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" />
+                        <TextBox Text="{TemplateBinding Tag}" Background="{TemplateBinding Background}" Panel.ZIndex="1" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}">
                             <TextBox.Style>
                                 <Style TargetType="{x:Type TextBox}">
                                     <Setter Property="Foreground" Value="Transparent"/>
