--- a/Cindeck/Views/OwnedIdolView.xaml
+++ b/Cindeck/Views/OwnedIdolView.xaml
@@ -26,6 +26,7 @@
                     <MenuItem Header="削除" Command="{Binding DeleteCommand}"  />
                     <Separator/>
                     <MenuItem Header="IIDをコピー" Command="{Binding CopyIidCommand}"  />
+                    <MenuItem Header="ゲストセンター" Command="{Binding SetGuestCenterCommand}"  />
                 </ContextMenu>
             </c:SelectedItemBindableDataGrid.ContextMenu>
             <c:SelectedItemBindableDataGrid.Columns>
