--- a/Cindeck/Views/ImplementedIdolView.xaml
+++ b/Cindeck/Views/ImplementedIdolView.xaml
@@ -19,6 +19,11 @@
             <c:IdolFilterPanel DataContext="{Binding Filter}"/>
             <Button DockPanel.Dock="Right" x:Name="btnLoadIdols" Command="{Binding Path=ReloadDataCommand}" Content="Wikiから取り込む" HorizontalAlignment="Right" Margin="0,0,5,0" Width="100" Height="30"/>
         </DockPanel>
+        <StackPanel Margin="0,5" DockPanel.Dock="Bottom">
+            <TextBlock>
+                <Run Text="{Binding Idols.SourceCollection.Count, Mode=OneWay}"/>件中<Run Text="{Binding Idols.Count, Mode=OneWay}"/>件の結果を表示中
+            </TextBlock>
+        </StackPanel>
         <c:SelectedItemBindableDataGrid ItemsSource="{Binding Idols, IsAsync=True}" Sorting="SelectedItemBindableDataGrid_Sorting" Margin="0,5,0,0" SelectedItemsList="{Binding SelectedIdols, Mode=OneWayToSource}" AutoGenerateColumns="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="0">
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
