--- a/Cindeck/Views/PotentialView.xaml
+++ b/Cindeck/Views/PotentialView.xaml
@@ -15,6 +15,11 @@
     </UserControl.Resources>
     <DockPanel LastChildFill="True">
         <c:IdolFilterPanel Margin="0,5,0,5" DockPanel.Dock="Top" DataContext="{Binding Filter}"/>
+        <StackPanel Margin="0,5" DockPanel.Dock="Bottom">
+            <TextBlock>
+                <Run Text="{Binding PotentialData.SourceCollection.Count, Mode=OneWay}"/>件中<Run Text="{Binding PotentialData.Count, Mode=OneWay}"/>件の結果を表示中
+            </TextBlock>
+        </StackPanel>
         <c:SelectedItemBindableDataGrid ItemsSource="{Binding Path=PotentialData, IsAsync=True}" CanUserAddRows="False" AutoGenerateColumns="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
