--- a/Cindeck/Resources.xaml
+++ b/Cindeck/Resources.xaml
@@ -78,4 +78,11 @@
         <sys:Int32>10</sys:Int32>
     </x:Array>
 
+    <ControlTemplate x:Key="ComboBoxTextBoxTemplate" TargetType="{x:Type TextBox}">
+        <StackPanel Orientation="Horizontal">
+            <Ellipse Height="16" Width="16" Margin="2" Fill="{Binding SelectedItem.Type, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ComboBox}, Converter={StaticResource IdolTypeToColorConverter}}"/>
+            <ScrollViewer x:Name="PART_ContentHost" Background="Transparent" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
+        </StackPanel>
+    </ControlTemplate>
+    
 </ResourceDictionary>
